--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<title>hello world</title>
-	<script src="./test.js"></script>
+		<script src="./tools/jquery-3.4.1.js"></script>
+		<script src="./tools/vue.js"></script>
+		<script src="./test.js"></script>
 	</head>
 	<body>
-		<div id="show"></div>
-		<a href="./page.html">this is a page</a>
+		<h1 align="center">VisualGMQ's web</h1>
+		<hr/>
+		<img src="jojo.jpg" width="100%" height="100%" alt="jojo!">
+		<div style="width: 100%; height: 50px;background-color:black;color:white;text-align: center;line-height: 50px; margin: 0px auto;" align="center">
+			<p>Created By VisualGMQ</p>
+		</div>
 	</body>
 </html>
