--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
 		<script src="./tools/jquery-3.4.1.js"></script>
 		<script src="./tools/vue.js"></script>
 		<script src="./test.js"></script>
+		<!--
+		<style>
+			body{
+				background-image: -webkit-linear-gradient(white, #000033);
+			}
+		</style>
+		-->
 	</head>
 	<body>
+		<!--<div id="toolbar"></div>-->
 		<h1 align="center">VisualGMQ's web</h1>
 		<hr/>
 		<img src="jojo.jpg" width="100%" height="100%" alt="jojo!">
-		<div style="width: 100%; height: 50px;background-color:black;color:white;text-align: center;line-height: 50px; margin: 0px auto;" align="center">
-			<p>Created By VisualGMQ</p>
+		<div class="infobar" style="width: 100%; height: 50px;background-color:black;color:white;text-align: center;line-height: 50px; margin: 0px auto;" align="center">
+			<a href="https://github.com/VisualGMQ/VisualGMQ.github.io" style="text-decoration: none;color: white">Created By VisualGMQ</a>
 		</div>
 	</body>
 </html>
