--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 		<h1 align="center">VisualGMQ's web</h1>
 		<hr/>
 		<img src="jojo.jpg" width="100%" height="100%" alt="jojo!">
-		<div class="infobar" style="width: 100%; height: 50px;background-color:black;color:white;text-align: center;line-height: 50px; margin: 0px auto;" align="center">
-			<a href="https://github.com/VisualGMQ/VisualGMQ.github.io" style="text-decoration: none;color: white">Created By VisualGMQ</a>
+		<div class="infobar" style="width: 100%; height: 50px;background-color:black;color:white;text-align: center;line-height: 25px; margin: 0px auto;" align="center">
+			<a href="https://github.com/VisualGMQ/VisualGMQ.github.io" style="text-decoration: none;color: white; display:block;">Created By VisualGMQ</a>
+			<a href="./slidBar/index.html" style="text-decoration: none; color:gray; font-size: 10px;">click goto slidbar game!</a>
 		</div>
 	</body>
 </html>
