update page, changed image

--- a/jxweb.html
+++ b/jxweb.html
@@ -9,6 +9,7 @@
 		<link type="text/css" rel="stylesheet" href="./src/jx/css/mainpage.css"/>
 	</head>
 	<body>
+		<!--开头-->
 		<div class="layer1">
 			<div class="toolbar">
 				<a href="http://www.aust.edu.cn/"><img src="./src/jx/resource/university.png" alt="university.png" width="100px" height="100ox"/></a>
@@ -17,6 +18,58 @@
 				<p><b>安徽理工大学<br/>机器人协会</b></p>
 				<p style="font-size: 15px; position:relative; top:-10px">VisualGMQ.github.io/jx.html</p>
 			</div>
+		</div>
+		
+		<!--导航栏
+		<div class="layer2">
+			<div class="toolbar">
+				<ul>
+					<li>
+						<a href="#">连接1</a>
+						<a href="#">连接2</a>
+						<a href="#">连接3</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<!--协会介绍-->
+		<div class="layer2">
+			<h2>协会简介</h2>
+		</div>
+
+		<!--各个组的介绍模块-->
+		<div class="layer3">
+			<h1>小组介绍</h1>
+			<div class="jigou model">
+				<h2>机构组</h2>
+				<img src="./src/jx/resource/jigou_icon.png" alt="jogou_icon.png" width="70px" height="70px"/>
+				<p>机构组描述</p>
+			</div>
+			<div class="shijue model">
+				<h2>视觉组</h2>
+				<img src="./src/jx/resource/shijue_icon.png" alt="jogou_icon.png" width="70px" height="70px"/>
+				<p>视觉组描述</p>
+			</div>
+			<div class="kongzhi model">
+				<h2>控制组</h2>
+				<img src="./src/jx/resource/kongzhi_icon.png" alt="kongzhi_icon.png" width="70px" height="70px"/>
+				<p>控制组描述</p>
+			</div>
+			<div class="donghua model">
+				<h2>动画组</h2>
+				<img src="./src/jx/resource/donghua_icon.png" alt="jogou_icon.png" width="70px" height="70px"/>
+				<p>动画组描述</p>
+			</div>
+		</div>
+		
+		<!--协会大事件-->
+		<div class="events">
+			<p><b>协会大事记</b></p>
+		</div>
+		
+		<!--结尾信息-->
+		<div class="endbar">
+			<p>本网站由视觉组制作</p>
 		</div>
 	</body>
 </html>
