update jx web, fixed layout, add button

--- a/jxweb.html
+++ b/jxweb.html
@@ -46,31 +46,31 @@
 			<h1>小组介绍</h1>
 			<div class="jigou model">
 				<h2>机构组</h2>
-				<img src="./src/jx/resource/jigou_icon.png" alt="jogou_icon.png" width="70px" height="70px"/>
+				<a href="./jigou.html"><img src="./src/jx/resource/jigou_icon.png" alt="jogou_icon.png" width="70px" height="70px"/></a>
 				<div class="text">
-					<p><b>机构组</b>的主要工作是设计，画图，制作和组装，即负责装置的机构部分的创建。在比赛中，首先要设计一个装置的机构，使其能满足你预定的功能。再通过三维制图软件，画出三维立体图。通过二维制图软件，做出标准的工程图纸。最后对所设计装置进行制作和组装。</p>
+					<p align="left"><b>机构组</b>的主要工作是设计，画图，制作和组装，即负责装置的机构部分的创建。在比赛中，首先要设计一个装置的机构，使其能满足你预定的功能。再通过三维制图软件，画出三维立体图。通过二维制图软件，做出标准的工程图纸。最后对所设计装置进行制作和组装。</p>
 				</div>
 			</div>
 			<div class="shijue model">
 				<h2>视觉组</h2>
-				<img src="./src/jx/resource/shijue_icon.png" alt="jogou_icon.png" width="70px" height="70px"/>
+				<a href="./shijue.html"><img src="./src/jx/resource/shijue_icon.png" alt="jogou_icon.png" width="70px" height="70px"/></a>
 				<div class="text">
-					<p><b>视觉组</b>主要负责运用计算机视觉，让机器可以看见东西。通过赋予机器视觉，让机器有一定的自我判断和处理能力。视觉组同时也利用基础人工智能让机器进行学习和计算。同时也通过利用各种计算机技术（网络制作，app制作，PC软件开发等）来辅助其他组，以达到将机器和网络互连的情况。</p>
-					<!--需要给每个组添加按钮来跳转到组的界面-->
+					<p align="left"><b>视觉组</b>主要负责运用计算机视觉，让机器可以看见东西。通过赋予机器视觉，让机器有一定的自我判断和处理能力。视觉组同时也利用基础人工智能让机器进行学习和计算。同时也通过利用各种计算机技术（网络制作，app制作，PC软件开发等）来辅助其他组，以达到将机器和网络互连的情况。</p>
 				</div>
+				<!--需要给每个组添加按钮来跳转到组的界面-->
 			</div>
 			<div class="kongzhi model">
 				<h2>控制组</h2>
-				<img src="./src/jx/resource/kongzhi_icon.png" alt="kongzhi_icon.png" width="70px" height="70px"/>
+				<a href="./kongzhi.html"><img src="./src/jx/resource/kongzhi_icon.png" alt="kongzhi_icon.png" width="70px" height="70px"/></a>
 				<div class="text">
-					<p><b>控制组</b>主要负责功能的实现，即运用各种电子元器件，通过编程代码，实现各种所需的功能。我们是灵魂的缔造者，是自然的模仿者，我们通过一行行神秘的代码，赋予机械生命一般的灵动。</p>
+					<p align="left"><b>控制组</b>主要负责功能的实现，即运用各种电子元器件，通过编程代码，实现各种所需的功能。我们是灵魂的缔造者，是自然的模仿者，我们通过一行行神秘的代码，赋予机械生命一般的灵动。</p>
 				</div>
 			</div>
 			<div class="donghua model">
 				<h2>动画组</h2>
-				<img src="./src/jx/resource/donghua_icon.png" alt="jogou_icon.png" width="70px" height="70px"/>
+				<a href="./donghua.html"><img src="./src/jx/resource/donghua_icon.png" alt="jogou_icon.png" width="70px" height="70px"/></a>
 				<div class="text">
-					<p><b>动画组</b>主要是视频的后期制作和机械成品的动画演示，让观众能直观的感受机械的整体和功能。动画组的工作即采用三维动画技术模拟机械的外形、材质、零部件和内部构造，把机械的设计原理、工作过程、性能特征、使用方式等一系列真实的事物以动态视频的形式演示出来的动态场景图。</p>
+					<p align="left"><b>动画组</b>主要是视频的后期制作和机械成品的动画演示，让观众能直观的感受机械的整体和功能。动画组的工作即采用三维动画技术模拟机械的外形、材质、零部件和内部构造，把机械的设计原理、工作过程、性能特征、使用方式等一系列真实的事物以动态视频的形式演示出来的动态场景图。</p>
 				</div>
 			</div>
 		</div>
@@ -108,7 +108,7 @@
 		
 		<!--结尾信息-->
 		<div class="endbar">
-			<p>本网站由视觉组制作</p>
+			<p><a href="https://github.com/VisualGMQ/VisualGMQ.github.io.git" style="text-decoration: none; color: white;">本网站由视觉组制作</a></p>
 		</div>
 	</body>
 </html>
