--- a/jxweb.html
+++ b/jxweb.html
@@ -87,7 +87,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2016年，协会作品《空调外机雾化喷淋节能装置》入围全国大学生节能减排大赛国赛；协会参加全国三维数字化创新设计大赛安徽赛区，获得特等奖两项、一等奖四项；协会参加全国大学生专利创新创业大赛获得全国优秀奖；协会参加安徽省百所名校百万大学生科普创意创新大赛获得三等奖两项，优秀奖三项；同年，协会代表淮南市参加第七届中国科技博览会。协会团队参加“创青春·中国联通”安徽省大学生创业大赛，作品《安庆华宇知识产权代理有限公司》荣获大赛银奖。<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017年，协会参加全国大学生机器人大赛获得全国南方赛区三等奖；协会作品《基于并联机构的多变径管道清洗机器人》参加全国大学生过程装备实践与创新大赛荣获国家一等奖；参加安徽省百所名校百万大学生科普创意创新大赛获得三等奖一项，参加全国三维数字化创新设计大赛安徽赛区，获得特等奖一项、二等奖三项。<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2018年，协会参加全国大学生机械创新大赛斩获国家一等奖俩项。飞思卡尔省级二等奖多项。节能减排国家二等奖。交通未来大赛国家一等奖。作为校代表队参加全国机器人大赛ROBOCON“飞龙绣球”获国家三等奖。互联网加省金奖。<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;协会目前已向国家知识产权局申请专利近350余项，其中发明专利40余项，实用新型专利260余项，外观型专利50余项。
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;协会目前已向国家知识产权局申请专利近350余项，其中发明专利40余项，实用新型专利260余项，外观型专利50余项。<br/>
 </p>
 			</div>
 		</div>
