--- a/jxweb.html
+++ b/jxweb.html
@@ -98,7 +98,7 @@
 				<h1>协会大事记</h1>
 				<table class="pictures" border="0px" align="center" height="100%" width="100%" cellspacing="0px">
 					<th align="left">
-						<h2>协会十九周年庆典</h2>
+						<h2>协会九周年庆典</h2>
 					</th>
 					<tr width="100%" height="100%" align="center">
 						<td width="50%" height="400px" align="center">
