--- a/page.html
+++ b/page.html
@@ -5,6 +5,10 @@
 		<title></title>
 	</head>
 	<body>
-		<p>hahahahahahhaahh</p>
+		<p>这是测试文件</p>
+		<form name="test" method="post" action="#">
+			<input type="password" value="123321" name="psd" id="passwd"/>
+			<input type="submit" value="submit" name="submit"/>
+		</form>
 	</body>
 </html>
