--- a/page.html
+++ b/page.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<title></title>
+	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 	</head>
 	<body>
-		<p>这是测试文件</p>
-		<form name="test" method="post" action="#">
-			<input type="password" value="123321" name="psd" id="passwd"/>
-			<input type="submit" value="submit" name="submit"/>
-		</form>
+		<a-scene>
+			<a-box src="https://i.imgur.com/mYmmbrp.jpg" position="-1 0.5 -3" rotation="0 45 0" >
+				<a-sphere position="1 0 3" color="green"></a-sphere>
+			</a-box>
+			<a-box src="https://i.imgur.com/mYmmbrp.jpg" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
+			<a-sky color="#ECECEC"></a-sky>
+		</a-scene>
 	</body>
 </html>
