--- a/page.html
+++ b/page.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+	<script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
 	</head>
 	<body>
-		<a-scene>
-			<a-box src="https://i.imgur.com/mYmmbrp.jpg" position="-1 0.5 -3" rotation="0 45 0" >
-				<a-sphere position="1 0 3" color="green"></a-sphere>
+		<a-scene vr-mode-ui="enabled: true" fog="type: linear; color:#AAA" keyboard-shortcuts=
+                "enterVR: false" stats>
+			<a-assets>
+				
+			</a-assets>
+			<a-box id="box1" position="0 2 -2" color="green" material="src: url(机协网站二维码.png)"
+					event-set__enter="_event: mouseenter; color: green" 
+					event-set__leave="_event: mouseleave; color: red">
 			</a-box>
-			<a-box src="https://i.imgur.com/mYmmbrp.jpg" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
-			<a-sky color="#ECECEC"></a-sky>
+			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"
+           event-set__enter="_event: mouseenter; color: #8FF7FF"
+           event-set__leave="_event: mouseleave; color: #4CC3D9"></a-box>
+		   <a-text id="cylinderText" value="This is a cylinder" align="center" color="#FFF" visible="true" position="0 -0.55 0.55"
+              geometry="primitive: plane; width: 1.75" material="color: #333"></a-text>
+			<a-camera>
+				<a-cursor></a-cursor>
+			</a-camera>
 		</a-scene>
+		
+		<script>
+			var box1 = document.getElementById("box1");
+			box1.setAttribute('color', "red");
+			box1.setAttribute('rotation', "45 0 0");
+			box1.addEventListener("click", function(event){
+				console.log("clicked box1");
+			});
+		</script>
 	</body>
 </html>
