--- a/page.html
+++ b/page.html
@@ -1,37 +1,116 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8"/>
-	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-	<script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
+		<meta charset="utf-8">
+		<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+		<script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
 	</head>
 	<body>
-		<a-scene vr-mode-ui="enabled: true" fog="type: linear; color:#AAA" keyboard-shortcuts=
-                "enterVR: false" stats>
+		<a-scene vr-mode-ui="enabled: true">
 			<a-assets>
-				
+				<img id="QRCode" src="机协网站二维码.png" alt="QRCode"/>
 			</a-assets>
-			<a-box id="box1" position="0 2 -2" color="green" material="src: url(机协网站二维码.png)"
-					event-set__enter="_event: mouseenter; color: green" 
-					event-set__leave="_event: mouseleave; color: red">
-			</a-box>
-			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"
-           event-set__enter="_event: mouseenter; color: #8FF7FF"
-           event-set__leave="_event: mouseleave; color: #4CC3D9"></a-box>
-		   <a-text id="cylinderText" value="This is a cylinder" align="center" color="#FFF" visible="true" position="0 -0.55 0.55"
-              geometry="primitive: plane; width: 1.75" material="color: #333"></a-text>
-			<a-camera>
+			
+			<a-box material="src: #QRCode" position="0 7 0" color="#eeeeee"></a-box>
+			<a-text id="code" side="double" value=";please code;" color="#222" position="0 2 -3" align="left" material="color: gray"></a-text>
+			<a-sky color="#6EBAA7"></a-sky>
+			<a-camera wasd-controls="enabled: false">
 				<a-cursor></a-cursor>
 			</a-camera>
 		</a-scene>
 		
 		<script>
-			var box1 = document.getElementById("box1");
-			box1.setAttribute('color', "red");
-			box1.setAttribute('rotation', "45 0 0");
-			box1.addEventListener("click", function(event){
-				console.log("clicked box1");
-			});
+			var text = "please code";
+			var isCap = false;
+			window.onkeydown = function(event){
+				event.preventDefault();
+				console.log(event.keyCode);
+				var isShift = event.shiftKey;
+				if(event.keyCode == 20)
+					isCap = !isCap;
+				switch(event.keyCode){
+					case 8:				//cancel
+						text = text.slice(0, text.length-1);
+						break;
+					case 9:
+						text += "    "	//Tap
+						break;
+					case 13:
+						text += '\n';	//enter
+						break;
+					case 48:
+						text += isShift?')':'0';
+						break;
+					case 49: 
+						text += isShift?'!':'1';
+						break;
+					case 50: 
+						text += isShift?'@':'2';
+						break;
+					case 51: 
+						text += isShift?'#':'3';
+						break;
+					case 52: 
+						text += isShift?'$':'4';
+						break;
+					case 53: 
+						text += isShift?'%':'5';
+						break;
+					case 54: 
+						text += isShift?'^':'6';
+						break;
+					case 55: 
+						text += isShift?'&':'7';
+						break;
+					case 56: 
+						text += isShift?'*':'8';
+						break;
+					case 57: 
+						text += isShift?'(':'9';
+						break;
+					case 186:
+						text += isShift?':':';';
+						break;
+					case 187:
+						text += isShift?'+':'=';
+						break;
+					case 188:
+						text += isShift?'<':',';
+						break;
+					case 189:
+						text += isShift?'_':'-';
+						break;
+					case 190:
+						text += isShift?'>':'.';
+						break;
+					case 191:
+						text += isShift?'?':'/';
+						break;
+					case 192:
+						text += isShift?'~':'`';
+						break;
+					case 219:
+						text += isShift?'{':'[';
+						break;
+					case 220:
+						text += isShift?'|':'\\';
+						break;
+					case 221:
+						text += isShift?'}':']';
+						break;
+					case 222:
+						text += isShift?'\"':'\'';
+						break;
+					default:
+						if(isCap)
+							text += String.fromCharCode(event.keyCode).toUpperCase();
+						else
+							text += String.fromCharCode(event.keyCode).toLowerCase();
+				}
+				console.log(text);
+				var textUI = document.getElementById("code");
+				textUI.setAttribute("value", text);
+			}
 		</script>
 	</body>
 </html>
