--- a/page.html
+++ b/page.html
@@ -6,34 +6,69 @@
 		<script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
 	</head>
 	<body>
+		<center><p>VR代码编辑器 全是bug版（QQ和微信浏览器不支持）</p></center>
 		<a-scene vr-mode-ui="enabled: true">
 			<a-assets>
 				<img id="QRCode" src="机协网站二维码.png" alt="QRCode"/>
 			</a-assets>
 			
 			<a-box material="src: #QRCode" position="0 7 0" color="#eeeeee"></a-box>
-			<a-text id="code" side="double" value=";please code;" color="#222" position="0 2 -3" align="left" material="color: gray"></a-text>
-			<a-sky color="#6EBAA7"></a-sky>
-			<a-camera wasd-controls="enabled: false">
-				<a-cursor></a-cursor>
+			<!--<a-text id="code" side="double" value=";please code;" color="#222" position="0 2 -3" align="left" material="color: gray"></a-text>-->
+			<a-sky color="lightblue"></a-sky>
+			<a-camera id="camera" wasd-controls="enabled: false">
+				<a-cursor color="blue"></a-cursor>
 			</a-camera>
 		</a-scene>
 		
 		<script>
-			var text = "please code";
-			var isCap = false;
-			window.onkeydown = function(event){
+			var codes = new Array();
+			var currentCode = null;
+			var degree = 0;
+			
+			function addPanel(x, y, z){
+				codes.push(new CodePanel(x, y, z, -degree));
+			}
+			
+			function move(x, y, z){
+				var camera = document.getElementById("camera");
+				var pos = camera.getAttribute("position");
+				camera.setAttribute("position", {x: pos.x + x, y: pos.y + y, z: pos.z + z});
+			}
+			
+			function inputText(event){
+				event = event || window.event;
 				event.preventDefault();
-				console.log(event.keyCode);
 				var isShift = event.shiftKey;
+				var isCtrl = event.ctrlKey;
+				if(isCtrl){
+					if(event.keyCode == 78){
+						addPanel(-5*Math.sin(degree), 2, -5*Math.cos(degree));
+						degree += 30;
+						console.log(degree);
+					}
+				}
+				if(event.keyCode == 37)
+					move(-0.3, 0, 0);
+				if(event.keyCode == 38)
+					move(0, 0, -0.3);
+				if(event.keyCode == 39)
+					move(0.3, 0, 0);
+				if(event.keyCode == 40)
+					move(0, 0, 0.3);
+				//console.log(event.keyCode);
+				if(currentCode == null)
+					return ;
+				text = currentCode.getAttribute("value");
+				console.log(text);
 				if(event.keyCode == 20)
-					isCap = !isCap;
+					event.target.isCap = !event.target.isCap;
+					
 				switch(event.keyCode){
 					case 8:				//cancel
 						text = text.slice(0, text.length-1);
 						break;
 					case 9:
-						text += "    "	//Tap
+						text += "    "	//Tap, 4 space 
 						break;
 					case 13:
 						text += '\n';	//enter
@@ -102,15 +137,65 @@
 						text += isShift?'\"':'\'';
 						break;
 					default:
-						if(isCap)
-							text += String.fromCharCode(event.keyCode).toUpperCase();
-						else
-							text += String.fromCharCode(event.keyCode).toLowerCase();
+						if(event.keyCode <37 && event.keyCode > 40)
+							if(event.target.isCap)
+								text += String.fromCharCode(event.keyCode).toUpperCase();
+							else
+								text += String.fromCharCode(event.keyCode).toLowerCase();
 				}
-				console.log(text);
-				var textUI = document.getElementById("code");
-				textUI.setAttribute("value", text);
+					
+				//console.log(text);
+				if(currentCode != null)
+					currentCode.setAttribute("value", text);
 			}
+			
+			//var currentCode = null;
+			
+			//codepanel class
+			function CodePanel(nx, ny ,nz, rotationy){
+				this.source = document.createElement('a-text');
+				this.text = "please coding here";
+				//text input
+				this.isCap = false;
+				this.source.setAttribute("side", "double");
+				this.source.setAttribute("value", this.text);
+				this.source.setAttribute("color", "#999");
+				this.source.setAttribute("align", "left");
+				this.source.setAttribute("material", "color", "#222");
+				this.source.setAttribute("position", {x: nx, y: ny, z: nz});
+				this.source.setAttribute("rotation", {x: 0, y: rotationy, z:0});
+				console.log(rotationy);
+				this.source.setAttribute("geometry", {primitive: "plane", width: 4, height: "auto", color: "#eee", side: "double"});
+				this.source.setAttribute("material", {color: "green"});
+				this.source.addEventListener("mouseenter", function(event){
+					e = event || window.event;
+					event.target.setAttribute("color", "#222");
+					currentCode = this;
+					console.log("entered text");
+				});
+				this.source.addEventListener("mouseleave", function(event){
+					event.target.setAttribute("color", "#999");
+					currentCode = null;
+					console.log("leaved text");
+				});
+				//this.source.addEventListener("keydown", inputText);
+				var scene = document.querySelector('a-scene');
+				scene.appendChild(this.source);
+			};
+			
+			CodePanel.prototype.getSource = function(){
+				return this.source;
+			};
+			
+			CodePanel.prototype.getText = function() {
+				return this.text;
+			};
+
+			window.onload = function(){
+				addPanel(-5*Math.sin(degree), 2, -5*Math.cos(degree));
+				degree += 30;
+			}
+			window.addEventListener("keydown", inputText);
 		</script>
 	</body>
 </html>
