--- a/shijue_show.html
+++ b/shijue_show.html
@@ -137,7 +137,7 @@
 						text += isShift?'\"':'\'';
 						break;
 					default:
-						if(event.keyCode <37 && event.keyCode > 40)
+						if(event.keyCode <37 || event.keyCode > 40)
 							if(event.target.isCap)
 								text += String.fromCharCode(event.keyCode).toUpperCase();
 							else
