--- a/kongzhi.html
+++ b/kongzhi.html
@@ -2,9 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>控制组</title>
+		<script src="tools/crafty.js"></script>
+		<script src="src/jx/js/kongzhi.js"></script>
 	</head>
 	<body>
-		<p>控制组专页</p>
+		<div id="game"></div>
 	</body>
 </html>
