--- a/shijue_show.html
+++ b/shijue_show.html
@@ -40,13 +40,6 @@
 				event.preventDefault();
 				var isShift = event.shiftKey;
 				var isCtrl = event.ctrlKey;
-				if(isCtrl){
-					if(event.keyCode == 78){
-						addPanel(-5*Math.sin(degree), 2, -5*Math.cos(degree));
-						degree += 30;
-						console.log(degree);
-					}
-				}
 				if(event.keyCode == 37)
 					move(-0.3, 0, 0);
 				if(event.keyCode == 38)
@@ -56,6 +49,13 @@
 				if(event.keyCode == 40)
 					move(0, 0, 0.3);
 				//console.log(event.keyCode);
+				if(isCtrl){
+					if(event.keyCode == 78){
+						addPanel(5*Math.sin(degree*Math.PI/180), 2, -5*Math.cos(degree*Math.PI/180));
+						degree += 70;
+						//console.log(degree);
+					}
+				}
 				if(currentCode == null)
 					return ;
 				text = currentCode.getAttribute("value");
@@ -137,6 +137,8 @@
 						text += isShift?'\"':'\'';
 						break;
 					default:
+						if(isCtrl && event.keyCode == 78)
+							break;
 						if(event.keyCode <37 || event.keyCode > 40)
 							if(event.target.isCap)
 								text += String.fromCharCode(event.keyCode).toUpperCase();
@@ -164,19 +166,18 @@
 				this.source.setAttribute("material", "color", "#222");
 				this.source.setAttribute("position", {x: nx, y: ny, z: nz});
 				this.source.setAttribute("rotation", {x: 0, y: rotationy, z:0});
-				console.log(rotationy);
-				this.source.setAttribute("geometry", {primitive: "plane", width: 4, height: "auto", color: "#eee", side: "double"});
+				this.source.setAttribute("geometry", {primitive: "plane", width: 0.2, height: 0.2, color: "#eee", side: "double"});
 				this.source.setAttribute("material", {color: "green"});
 				this.source.addEventListener("mouseenter", function(event){
 					e = event || window.event;
 					event.target.setAttribute("color", "#222");
 					currentCode = this;
-					console.log("entered text");
+					//console.log("entered text");
 				});
 				this.source.addEventListener("mouseleave", function(event){
 					event.target.setAttribute("color", "#999");
 					currentCode = null;
-					console.log("leaved text");
+					//console.log("leaved text");
 				});
 				//this.source.addEventListener("keydown", inputText);
 				var scene = document.querySelector('a-scene');
@@ -192,9 +193,12 @@
 			};
 
 			window.onload = function(){
-				addPanel(-5*Math.sin(degree), 2, -5*Math.cos(degree));
-				degree += 30;
+				var camera = document.getElementsByName("a-camera");
+				//console.log(camera.rotation.x);
+				addPanel(5*Math.sin(degree*Math.PI/180), 2, -5*Math.cos(degree*Math.PI/180));
+				degree += 70;
 			}
+			
 			window.addEventListener("keydown", inputText);
 		</script>
 	</body>
