--- a/shijue.html
+++ b/shijue.html
@@ -21,6 +21,11 @@
 				<p>游戏编程</p>
 			</div>
 		</a>
+		<a class="bubble project" href="shijue_project.html">
+			<div>
+				<p>底层和工程<br/>构建工具</p>
+			</div>
+		</a>
 		<a class="bubble version" href="404.html">
 			<div>
 				<p>计算机视觉</p>
