--- a/index.html
+++ b/index.html
@@ -3,27 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<title>hello world</title>
-		<script src="./tools/jquery-3.4.1.js"></script>
-		<script src="./tools/vue.js"></script>
-		<script src="./src/index/js/test.js"></script>
-		<link type="text/css" rel="stylesheet" href="./src/index/css/test.css"/>
+		<link type="text/css" rel="stylesheet" href="./index-resource/css/test.css"/>
 	</head>
 	<body>
 		<div class="toolbar">
 			<ul>
-				<li><a href="./page.html" target="_blank">goto page.html</a></li>
-				<li><a href="./slidBar/index.html" target="_blank">goto slidbar game</a></li>
-				<li><a href="./jxweb.html" target="_blank">goto jx web</a></li>
+				<li><a href="./jx_web/jxweb.html" target="_blank">goto jx web</a></li>
 				<!--<li><a>link4</a></li>-->
 			</ul>
 		</div>
 		<h1 align="center">VisualGMQ's web</h1>
 		<hr/>
-		<!--<img src="./src/index/resource/jojo.jpg" width="100%" height="100%" alt="jojo!">-->
-		<img src="src/index/resource/jojo.jpg" width="100%" height="100%" alt="jojo!">
+		<img src="index-resource/resource/jojo.jpg" width="100%" height="100%" alt="jojo!">
 		<div class="infobar" style="width: 100%; height: 50px;background-color:black;color:white;text-align: center;line-height: 25px; margin: 0px auto;" align="center">
 			<a href="https://github.com/VisualGMQ/VisualGMQ.github.io" style="text-decoration: none;color: white; display:block;">Created By VisualGMQ</a>
-			<a href="./slidBar/index.html" style="text-decoration: none; color:gray; font-size: 10px;">click goto slidbar game!</a>
 		</div>
 	</body>
 </html>
